# cube-plugin

./: CMakeLists.txt  README.md
JsonTreePlugin/: system_tree.json
JsonTreePlugin/src/: JsonTreePlugin.cpp  JsonTreePlugin.h
